fix to broken new jounrey path

--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -56,7 +56,7 @@ GOV.UK prototype kit
                   </div>
                   <div style="float:left; width:31%; margin-top:8px;" display="flex">
                     <div>
-                      <p><span class="heading-large">{{session.ticketsRemaining}}</span> tickets remaining</p>
+                      <p><span class="heading-large">{{20 - session.trackingTotalReg}}</span> tickets remaining</p>
                     </div>
                   </div>
                   <div style="float:right; width:28%;  margin-top:8px;">
