--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -76,6 +76,7 @@
 				  </dd>
 			  </div>
 
+
 			  <div>
 				  <dt class="cya-question">
 					  Venue
@@ -87,6 +88,40 @@
 					  </a>
 				  </dd>
 			  </div>
+
+
+
+
+
+			  <div>
+				  <dt class="cya-question">
+					  Sectors
+				  </dt>
+				  <dd class="cya-answer"    style="white-space: pre-wrap;">{{ data['sectors'] }}</dd>
+				  <dd class="cya-change" >
+					  <a href="/create-event/change-title">
+						  Change
+					  </a>
+				  </dd>
+			  </div>
+
+
+			  <div>
+				  <dt class="cya-question">
+					  International markets
+				  </dt>
+				  <dd class="cya-answer"     style="white-space: pre-wrap;">{{ data['markets'] }}</dd>
+				  <dd class="cya-change">
+					  <a href="/create-event/change-description">
+						  Change
+					  </a>
+				  </dd>
+			  </div>
+
+
+
+
+
 
 			  <div>
 				  <dt class="cya-question">
