--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -172,7 +172,7 @@
 
 		  <div class="form-group" style="margin-top:40px">
 			  <input type="submit" class="button" value="Save and continue">
-			  <p style="margin-top:25px"><a href="/create-event/title">I'll complete this later - I don't have this information yet</a></p>
+			  <p style="margin-top:25px"><a href="/create-event/images">I'll complete this later - I don't have this information yet</a></p>
 
 			  <p id="enter-new-address" style="display:none">
 
