--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -119,6 +119,17 @@
 			  </div>
 
 
+			  <div>
+				  <dt class="cya-question">
+					  Export experience
+				  </dt>
+				  <dd class="cya-answer"     style="white-space: pre-wrap;">{{ data['audience-experience'] }}</dd>
+				  <dd class="cya-change">
+					  <a href="/create-event/change-title">
+						  Change
+					  </a>
+				  </dd>
+			  </div>
 
 
 
