--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -132,6 +132,17 @@
 			  </div>
 
 
+			  <div>
+				  <dt class="cya-question">
+					  Who would be a good fit
+				  </dt>
+				  <dd class="cya-answer"     style="white-space: pre-wrap;">{{ data['summary-target-audience'] }}</dd>
+				  <dd class="cya-change">
+					  <a href="/create-event/change-title">
+						  Change
+					  </a>
+				  </dd>
+			  </div>
 
 
 			  <div>
