updated people section

--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -143,6 +143,14 @@
           <!-- EVENT title  -->
           <h1 class="title">{{ data['event-title'] }}</h1>
 
+
+
+          <p class="description" >{{ data['sectors'] }}</p>
+          <p class="description" >{{ data['markets'] }}</p>
+          <p class="description" >{{ data['audience-experience'] }}</p>
+          <p class="description" >{{ data['summary-target-audience'] }}</p>
+
+
           <!-- Event description -->
           <p class="description" >{{ data['event-description'] }}</p>
         </div>
