--- a/app/views/create-event/title.html
+++ b/app/views/create-event/title.html
@@ -179,7 +179,7 @@
 		  <!--  Summary of target audience  -->
 		  <div class="form-group" style="margin-top:0px; margin-bottom:20px">
 			  <label class="form-label-bold" for="summary-target-audience">
-				  Who would be a good fit for this event? If you have any eligibility criteria, include it here.
+				  Describe your overall target audience for this event, including any eligibility criteria.
 			  </label>
 			  <textarea class="form-control" name="summary-target-audience" id="summary-target-audience" rows="4" style="width: 100%;"></textarea>
 		  </div>
