more new crete fixes

--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -175,7 +175,7 @@
 
           <!-- WHO  -->
           <div style="text-align: left; width:300px; margin-right:20px;">
-            <p class="right-side-stuff"  style="white-space: pre-wrap;">Department for International Trade<br>North East</p>
+            <p class="right-side-stuff"  style="white-space: pre-wrap;">Department for International Trade<br>{{ data['organiser-name'] }}</p>
           </div>
 
         </div>
