crap draft of parner logos

--- a/app/views/create-event/images.html
+++ b/app/views/create-event/images.html
@@ -9,7 +9,7 @@
 
 <main id="content" role="main">
   <div class="grid-row">
-    <div class="column-two-thirds">
+    <div class="full-grid-mode" style="margin-left:15px">
 
 
 	  <!--  BREADCRUMB  -->
@@ -80,21 +80,45 @@
 
 		  <!--  THE PARTNER LOGOS  -->
 		  {% if errorMissingPartnerImage %}
-		  <div class="form-group form-group-error">
-			  {% endif %}
+		  	  <div class="form-group form-group-error">
+		  {% endif %}
 
 			  <div class="form-group"
 				   style="margin-top:10px; margin-bottom:20px">
-				  <label class="form-label-bold" >
-					  Partner logos
+				  <label class="form-label-bold" style="margin-bottom:10px;">
+					  Select partner logos
 				  </label>
+				  <fieldset style="width:100%; display: flex;">
+
+					  <div class="multiple-choice" style="float: left; padding-top:0px; width:300px">
+						  <input id="eu-logo" name="eu-logo" type="checkbox" value="Meet with buyers" style="margin-top:5px">
+						  <label for="eu-logo"><img src="/public/images/partner11.jpg" style="width:205px;height:89px; border:1px solid #000000"></label>
+					  </div>
+
+					  <div class="multiple-choice" style="float: left; padding-top:0px; ">
+						  <input id="dit-logo" name="dit-logo" type="checkbox" value="Meet with buyers" style="margin-top:5px">
+						  <label for="dit-logo"><img src="/public/images/partner12.jpg" style="width:205px;height:89px; border:1px solid #000000"></label>
+					  </div>
+
+					  <div class="multiple-choice" style="float: left; padding-top:0px; ">
+						  <input id="growth-logo" name="growth-logo" type="checkbox" value="Meet with buyers" style="margin-top:5px">
+						  <label for="growth-logo"><img src="/public/images/partner13.jpg" style="width:205px;height:89px; border:1px solid #000000"></label>
+					  </div>
+
+					  <div class="multiple-choice" style="float: right; padding-top:0px; ">
+						  <input id="bw-logo" name="bw-logo" type="checkbox" value="Meet with buyers" style="margin-top:5px">
+						  <label for="bw-logo"><img src="/public/images/partner14.jpg" style="width:205px;height:89px; border:1px solid #000000"></label>
+					  </div>
+
+				  </fieldset>
+
 				  <div style="margin-top:5px">
-					  <input type="submit" class="button-secondary" value="Choose an image">
+					  <input type="submit" class="button-secondary" value="Choose an new image">
 				  </div>
 			  </div>
 
-			  {% if errorMissingPartnerImage %}
-		  </div>
+		  {% if errorMissingPartnerImage %}
+		  		</div>
 		  {% endif %}
 
 
