--- a/app/views/includes/tracking-links.html
+++ b/app/views/includes/tracking-links.html
@@ -14,7 +14,7 @@
 
 
 
-<table style="width:100%; margin-top:20px">
+<table style="width:100%;">
 
 
   {% if 0 < session.trackingLinksNames.length  %}
