--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -134,7 +134,7 @@ GOV.UK prototype kit
 
             <!--  Tracking links for reg  -->
             <div class="tabs-panel" id="track-links" >
-              <div class="tabs-panel-inner">
+              <div class="tabs-panel-inner " style="margin-top:20px;">
 
                 {% include "includes/tracking-links.html" %}
 
