--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -87,6 +87,7 @@
       p
       {
         font-family: Arial,sans-serif;
+        font-size: 20px;
       }
 
 
@@ -114,7 +115,7 @@
         </div>
 
 
-        <form action="/make-draft-live" method="get" class="form">
+        <form action="/create-event/go-live" method="get" class="form">
 
           <div style="margin-left:20px; margin-right:30px; margin-top:10px; float: right;">
             <input type="submit" class="button-grey" value="Make event live" style="margin-bottom:35px; width:170px;">
@@ -145,14 +146,18 @@
 
 
 
-          <p class="description" >{{ data['sectors'] }}</p>
-          <p class="description" >{{ data['markets'] }}</p>
-          <p class="description" >{{ data['audience-experience'] }}</p>
-          <p class="description" >{{ data['summary-target-audience'] }}</p>
+          <p><span style="font-weight:700">Sectors</span> <br>{{ data['sectors'] }}</p>
+
+          <p><span style="font-weight:700">Markets</span> <br>{{ data['markets'] }}</p>
+
+
+          <p><span style="font-weight:700">Target export experience</span> <br>{{ data['audience-experience'] }}</p>
+
+          <p><span style="font-weight:700">Who the even is suited to</span> <br>{{ data['summary-target-audience'] }}</p>
 
 
           <!-- Event description -->
-          <p class="description" >{{ data['event-description'] }}</p>
+          <p class="description" ><span style="font-weight:700">More details</span> <br>{{ data['event-description'] }}</p>
         </div>
 
 
