fixes for testing

--- a/app/views/create-event/template-reg.html
+++ b/app/views/create-event/template-reg.html
@@ -27,6 +27,9 @@
       </h1>
 
 
+	  <p style="margin-bottom:40px;">A confirmation email will automatically be sent to every new person who registers for this event.</p>
+
+
 	  <form action="/create-event/template-reg-onwards" method="get" class="form">
 
 		  <p class="heading-small">Email subject</p>
