--- a/app/views/includes/draft-events.html
+++ b/app/views/includes/draft-events.html
@@ -66,7 +66,7 @@
             <li style="margin-bottom:3px;"><a href="#">Delete</a></li>
             <li style="margin-bottom:3px;">
               <div style="margin-left:0px; margin-top:20px;">
-                <input type="submit" class="button-secondary" value="Make event live" formaction="/account#draft-events">
+                <input type="submit" class="button-secondary" value="Make event live" formaction="/create-event/go-live">
               </div>
             </li>
           </ul>
