--- a/app/views/create-event/template-reminder.html
+++ b/app/views/create-event/template-reminder.html
@@ -29,6 +29,25 @@ GOV.UK prototype kit
 
 			<form action="/create-event/template-reminder-onwards" method="get" class="form">
 
+
+				<fieldset class="form-group" style="margin-bottom:20px">
+
+					<label class="form-label-bold" for="sold-out-message">
+						When to send reminder
+					</label>
+					<!-- <p class="form-hint">For example, 31 3 1980</p>  -->
+					<div class="form-group form-group-day form-date">
+
+						<input class="form-control  {% if errorAttendee %} form-control-error {% endif %}"
+							   id="close-reg-early-days" name="close-reg-early-days" type="number" pattern="[0-9]*"
+							   value="2" style="float: left; width:50px;">
+						<p style="float: left; margin-left:10px; margin-top:8px;"> days before event</p>
+					</div>
+				</fieldset>
+
+				<br>
+
+
 				<p class="heading-small">Email subject</p>
 
 				<div id="email-reg-subject-section" class="form-group panel panel-border-narrow" >
