--- a/app/views/create-event/tickets.html
+++ b/app/views/create-event/tickets.html
@@ -84,7 +84,7 @@
 				  <label class="form-label-bold" for="sold-out-message">
 					  Message when event reaches capacity (optional)
 				  </label>
-				  <textarea class="form-control" name="sold-out-message" id="sold-out-message" rows="2" style="width: 100%;"></textarea>
+				  <textarea class="form-control" name="sold-out-message" id="sold-out-message" rows="3" style="width: 100%;">{{ data['sold-out-message'] }}</textarea>
 			  </div>
 		  </fieldset>
 
