fix to date being saved wrongly

--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -226,7 +226,7 @@
 							  <!-- Row three -->
 							  <div style="  margin-bottom: 15px;">
 								  <input class="form-control" style="width:50px; margin-right:20px"
-										 id="event-day" name="event-day" type="number" pattern="[0-9]*" value="{{ data['agenda-hour-3'] }}">
+										 id="agenda-hour-3" name="agenda-hour-3" type="number" pattern="[0-9]*" value="{{ data['agenda-hour-3'] }}">
 
 								  <input class="form-control" style="width:50px; margin-right:40px;"
 										 id="agenda-minutes-3" name="agenda-minutes-3" type="number"  value="{{ data['agenda-minutes-3'] }}">
